sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:14: error: not found: value gap
   while (k>= eca && (getValeur(k-gap)>v)){
                                  ^